--- a/kubernetes/helm/angelnu-charts.yaml
+++ b/kubernetes/helm/angelnu-charts.yaml
@@ -2,8 +2,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: k8s-at-home-charts
+  name: angelnu
   namespace: flux-system
 spec:
-  url: https://k8s-at-home.com/charts
+  url: https://angelnu.github.io/helm-charts
   interval: 10m
