--- a/kubernetes/secrets/secrets-sync/kustomization.yaml
+++ b/kubernetes/secrets/secrets-sync/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cloudflare-secret.yaml
+  - grafana-secret.yaml
   - nordvpn-secret.yaml
   - s3-backup-secret.yaml
   - splunk-blob.yaml
