--- a/kubernetes/infrastructure/ingress/kustomization.yaml
+++ b/kubernetes/infrastructure/ingress/kustomization.yaml
@@ -5,3 +5,4 @@ resources:
   - internal-helm-release.yaml # resources only allowed internally
   - external-helm-release.yaml # resources allowed internally & externally
   - logging-internal-helm-release.yaml # special ingress for logs - nginx logs not ingested by splunk
+  - flux-ingress-rule.yaml # special rule for weave gitops url
