--- a/bare-metal/inventory/inventory-develop.yml
+++ b/bare-metal/inventory/inventory-develop.yml
@@ -28,3 +28,6 @@ k3s_cluster:
     KEYVAULT_CLIENT_ID: "{{ lookup('azure_keyvault_secret', 'azure-keyvault-client-id', vault_url=kv_url) }}"
     KEYVAULT_SECRET: "{{ lookup('azure_keyvault_secret', 'azure-keyvault-secret', vault_url=kv_url) }}"
     nut_user_subscriber_password: "{{ lookup('azure_keyvault_secret', 'nut-user-subscriber-password', vault_url=kv_url) }}"
+    HOMELAB_DOMAIN_NAME: "{{ lookup('azure_keyvault_secret', 'homelab-domain-name', vault_url=kv_url) }}"
+    WEAVE_GITOPS_APP_CLIENTID: "{{ lookup('azure_keyvault_secret', 'weave-gitops-app-clientid', vault_url=kv_url) }}"
+    WEAVE_GITOPS_APP_CLIENTSECRET: "{{ lookup('azure_keyvault_secret', 'weave-gitops-app-clientsecret', vault_url=kv_url) }}"
