--- a/bare-metal/roles/k3s/tasks/k3s.yml
+++ b/bare-metal/roles/k3s/tasks/k3s.yml
@@ -71,3 +71,31 @@
     - k3s_control_node is defined
     - k3s_control_node
   changed_when: false
+
+# not using secrets-sync because this secret contains non secret values and i don't feel like sticking them in keyvault
+# secret expires 30/6/2025
+- name: Create flux weave gitops secret
+  become: true
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: Secret
+      metadata:
+        name: oidc-auth
+        namespace: flux-system
+      type: Opaque
+      stringData:
+        claimGroups: roles
+        claimUsername: email
+        clientID: "{{ WEAVE_GITOPS_APP_CLIENTID }}"
+        customScopes: openid,profile,email
+        clientSecret: "{{ WEAVE_GITOPS_APP_CLIENTSECRET }}"
+        issuerURL: "https://login.microsoftonline.com/{{ azure_tenant }}/v2.0"
+        redirectURL: "https://flux.{{ HOMELAB_DOMAIN_NAME }}/oauth2/callback"
+    kubeconfig: "{{ kube_file }}"
+  no_log: true
+  when:
+    - k3s_control_node is defined
+    - k3s_control_node
+  changed_when: false
