--- a/kubernetes/helm/csi-secrets-store-provider-azure.yaml
+++ b/kubernetes/helm/csi-secrets-store-provider-azure.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   url: https://azure.github.io/secrets-store-csi-driver-provider-azure/charts
-  interval: 10m
+  interval: 1h0m0s
