--- a/kubernetes/secrets/azure-secrets-helm-release.yaml
+++ b/kubernetes/secrets/azure-secrets-helm-release.yaml
@@ -5,12 +5,12 @@ metadata:
   name: azure-secrets
   namespace: kube-system
 spec:
-  interval: 5m
+  interval: 1h0m0s
   chart:
     spec:
       chart: csi-secrets-store-provider-azure
       version: 1.4.2
-      interval: 5m
+      interval: 1h0m0s
       sourceRef:
         kind: HelmRepository
         name: csi-secrets-store-provider-azure
