--- a/kubernetes/secrets/reflector-helm-release.yaml
+++ b/kubernetes/secrets/reflector-helm-release.yaml
@@ -8,10 +8,10 @@ spec:
   chart:
     spec:
       chart: reflector
-      interval: 5m
+      interval: 1h0m0s
       sourceRef:
         kind: HelmRepository
         name: emberstack
         namespace: flux-system
       version: 7.0.151
-  interval: 5m
+  interval: 1h0m0s
