--- a/kubernetes/clusters/develop/apps-bazarr.yaml
+++ b/kubernetes/clusters/develop/apps-bazarr.yaml
@@ -5,7 +5,7 @@ metadata:
   name: apps-bazarr
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 1h0m0s
   dependsOn:
     - name: namespaces
     - name: cluster-settings
