--- a/kubernetes/clusters/develop/apps-home-automation.yaml
+++ b/kubernetes/clusters/develop/apps-home-automation.yaml
@@ -5,7 +5,7 @@ metadata:
   name: apps-home-automation
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 1h0m0s
   dependsOn:
     - name: namespaces
     - name: helm
