--- a/kubernetes/clusters/develop/helm.yaml
+++ b/kubernetes/clusters/develop/helm.yaml
@@ -5,7 +5,7 @@ metadata:
     name: helm
     namespace: flux-system
 spec:
-    interval: 5m0s
+    interval: 1h0m0s
     path: ./kubernetes/helm
     prune: true
     sourceRef:
