--- a/kubernetes/clusters/production/apps.yaml
+++ b/kubernetes/clusters/production/apps.yaml
@@ -5,7 +5,7 @@ metadata:
   name: apps
   namespace: flux-system
 spec:
-  interval: 10m0s
+  interval: 1h0m0s
   dependsOn:
     - name: namespaces
     - name: helm
