--- a/kubernetes/clusters/production/infrastructure.yaml
+++ b/kubernetes/clusters/production/infrastructure.yaml
@@ -5,7 +5,7 @@ metadata:
   name: infrastructure
   namespace: flux-system
 spec:
-  interval: 5m0s
+  interval: 1h0m0s
   dependsOn:
     - name: namespaces
     - name: helm
