--- a/kubernetes/helm/prometheus-community.yaml
+++ b/kubernetes/helm/prometheus-community.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   url: https://prometheus-community.github.io/helm-charts
-  interval: 15m
+  interval: 1h0m0s
