--- a/kubernetes/helm/splunk-otel-collector.yaml
+++ b/kubernetes/helm/splunk-otel-collector.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: flux-system
 spec:
   url: https://signalfx.github.io/splunk-otel-collector-chart
-  interval: 10m
+  interval: 1h0m0s
