--- a/kubernetes/monitor/otel/helm-release.yaml
+++ b/kubernetes/monitor/otel/helm-release.yaml
@@ -5,12 +5,12 @@ metadata:
   name: splunk-otel-collector
   namespace: monitor
 spec:
-  interval: 5m
+  interval: 1h0m0s
   chart:
     spec:
       chart: splunk-otel-collector
       version: 0.80.0
-      interval: 5m
+      interval: 1h0m0s
       sourceRef:
         kind: HelmRepository
         name: splunk-otel-collector-chart
