--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     },
     "files.eol": "\n",
     "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
     "redhat.telemetry.enabled": false,
     "terminal.integrated.defaultProfile.windows": "Ubuntu-20.04 (WSL)",
