feat: migrate to new azure keyvault

--- a/kubernetes/settings/production/settings.yaml
+++ b/kubernetes/settings/production/settings.yaml
@@ -16,7 +16,7 @@ data:
   MQTT_IP: 192.168.0.244
   SYSLOG_IP: 192.168.0.254
 
-  AZURE_VAULT_NAME: chickenwaffles-keyvault
+  AZURE_VAULT_NAME: vaultkxtjt3mfw7
   AZURE_TENANT_ID: e6d53a80-38c0-45ee-8b0e-ff7db3484ad5 # https://petri.com/finding-identifier-azure-office-365-tenants/ , https://stackoverflow.com/questions/45661109/are-azure-subscription-id-aad-tenant-id-and-aad-app-client-id-considered-secre
   LETSENCRYPT_SERVER: https://acme-v02.api.letsencrypt.org/directory
 
