chore: enable splunk smartstore logging
troubleshoot issues with connecting to azure container

--- a/kubernetes/monitor/splunk/splunk-defaults.yaml
+++ b/kubernetes/monitor/splunk/splunk-defaults.yaml
@@ -22,6 +22,8 @@ data:
         cert: /opt/splunk/etc/auth/server.pem
         password: password
         ca: /opt/splunk/etc/auth/cacert.pem
+      launch:
+        AZURE_LOG_LEVEL: debug
       conf:
         - key: indexes
           value:
