--- a/bare-metal/inventory/inventory-develop.yml
+++ b/bare-metal/inventory/inventory-develop.yml
@@ -1,4 +1,11 @@
 ---
+all:
+  children:
+    localhost:
+    k3s_cluster:
+  vars:
+    kv_url: https://vault2pkmeuty6p.vault.azure.net/
+
 localhost:
   hosts:
     127.0.0.1
@@ -8,8 +15,6 @@ localhost:
     ansible_connection: local
     branch: main
     target_path: kubernetes/clusters/develop
-    kv_url: 'https://chickenwaffles-vault-dev.vault.azure.net/'
-    github_token: "{{ lookup('azure_keyvault_secret', 'github-token', vault_url=kv_url) }}"
 
 k3s_cluster:
   hosts:
@@ -21,14 +26,7 @@ k3s_cluster:
   vars:
     k3s_release_version: v1.27.2+k3s1
     ansible_connection: paramiko # don't need to apt-get sshpass
-    ansible_user: colin
+    ansible_user: ubuntu
     ansible_python_interpreter: /usr/bin/python3
     nut_controller_address: 192.168.0.225
     k3s_registration_address: 192.168.0.8
-    kv_url: 'https://chickenwaffles-vault-dev.vault.azure.net/'
-    KEYVAULT_CLIENT_ID: "{{ lookup('azure_keyvault_secret', 'azure-keyvault-client-id', vault_url=kv_url) }}"
-    KEYVAULT_SECRET: "{{ lookup('azure_keyvault_secret', 'azure-keyvault-secret', vault_url=kv_url) }}"
-    nut_user_subscriber_password: "{{ lookup('azure_keyvault_secret', 'nut-user-subscriber-password', vault_url=kv_url) }}"
-    HOMELAB_DOMAIN_NAME: "{{ lookup('azure_keyvault_secret', 'homelab-domain-name', vault_url=kv_url) }}"
-    WEAVE_GITOPS_APP_CLIENTID: "{{ lookup('azure_keyvault_secret', 'weave-gitops-app-clientid', vault_url=kv_url) }}"
-    WEAVE_GITOPS_APP_CLIENTSECRET: "{{ lookup('azure_keyvault_secret', 'weave-gitops-app-clientsecret', vault_url=kv_url) }}"
