--- a/bare-metal/inventory/inventory-prod.yml
+++ b/bare-metal/inventory/inventory-prod.yml
@@ -1,15 +1,20 @@
 ---
+all:
+  children:
+    localhost:
+    k3s_cluster:
+  vars:
+    kv_url: 'https://vaultkxtjt3mfw7.vault.azure.net/'
+
 localhost:
   hosts:
     127.0.0.1
   vars:
-    flux_version: 0.41.1
-    weave_gitops_version: 0.26.0
+    flux_version: 0.41.2
+    weave_gitops_version: 0.28.0
     ansible_connection: local
-    branch: main
+    branch: refactor
     target_path: kubernetes/clusters/production
-    kv_url: 'https://chickenwaffles-keyvault.vault.azure.net/'
-    github_token: "{{ lookup('azure_keyvault_secret', 'github-token', vault_url=kv_url) }}"
 
 k3s_cluster:
   hosts:
@@ -28,13 +33,6 @@ k3s_cluster:
     ansible_python_interpreter: /usr/bin/python3
     nut_controller_address: 192.168.0.225
     k3s_registration_address: 192.168.0.225
-    kv_url: 'https://chickenwaffles-keyvault.vault.azure.net/'
-    KEYVAULT_CLIENT_ID: "{{ lookup('azure_keyvault_secret', 'azure-keyvault-client-id', vault_url=kv_url) }}"
-    KEYVAULT_SECRET: "{{ lookup('azure_keyvault_secret', 'azure-keyvault-secret', vault_url=kv_url) }}"
-    PUSHOVER_APP_TOKEN: "{{ lookup('azure_keyvault_secret', 'pushover-app-token', vault_url=kv_url) }}"
-    PUSHOVER_USER_TOKEN: "{{ lookup('azure_keyvault_secret', 'pushover-user-token', vault_url=kv_url) }}"
+    pushover_app_token: "{{ lookup('azure_keyvault_secret', 'pushover-app-token', vault_url=kv_url) }}"
+    pushover_user_token: "{{ lookup('azure_keyvault_secret', 'pushover-user-token', vault_url=kv_url) }}"
     nut_user_controller_password: "{{ lookup('azure_keyvault_secret', 'nut-user-controller-password', vault_url=kv_url) }}"
-    nut_user_subscriber_password: "{{ lookup('azure_keyvault_secret', 'nut-user-subscriber-password', vault_url=kv_url) }}"
-    HOMELAB_DOMAIN_NAME: "{{ lookup('azure_keyvault_secret', 'homelab-domain-name', vault_url=kv_url) }}"
-    WEAVE_GITOPS_APP_CLIENTID: "{{ lookup('azure_keyvault_secret', 'weave-gitops-app-clientid', vault_url=kv_url) }}"
-    WEAVE_GITOPS_APP_CLIENTSECRET: "{{ lookup('azure_keyvault_secret', 'weave-gitops-app-clientsecret', vault_url=kv_url) }}"
