--- a/bare-metal/requirements.txt
+++ b/bare-metal/requirements.txt
@@ -1,12 +1,12 @@
-ansible-core==2.14.1
+ansible-core==2.15.2
 azure-cli-core==2.34.0
 azure-common==1.1.11
 azure-identity==1.7.0
 azure-keyvault==1.1.0
-kubernetes==25.3.0
+kubernetes==27.2.0
 msrest==0.7.1
 msrestazure==0.6.4
 packaging==21.3
-paramiko==2.12.0
+paramiko==2.12.0 # locked as conflicts with azure-cli-core
 requests[security]==2.28.1
 xmltodict==0.13.0
