--- a/bare-metal/roles/k3s/vars/main.yml
+++ b/bare-metal/roles/k3s/vars/main.yml
@@ -24,3 +24,8 @@ k3s_server_manifests_urls:
     filename: cert-manager.yaml
 
 kube_file: /etc/rancher/k3s/k3s.yaml
+
+# Secrets common to both dev and prod
+homelab_domain_name: "{{ lookup('azure_keyvault_secret', 'homelab-domainname', vault_url=kv_url) }}"
+weave_gitops_app_clientid: "{{ lookup('azure_keyvault_secret', 'weave-gitops-app-clientid', vault_url=kv_url) }}"
+weave_gitops_app_clientsecret: "{{ lookup('azure_keyvault_secret', 'weave-gitops-app-clientsecret', vault_url=kv_url) }}"
