--- a/bare-metal/roles/nut/vars/main.yml
+++ b/bare-metal/roles/nut/vars/main.yml
@@ -5,6 +5,7 @@ nut_max_retry: 3
 
 nut_user_controller_name: nutcontrolleruser
 nut_user_subscriber_name: nutsubscriberuser
+nut_user_subscriber_password: "{{ lookup('azure_keyvault_secret', 'nut-user-subscriber-password', vault_url=kv_url) }}"
 
 upsmon_shutdown_cmd: "/sbin/shutdown -h +0"
 upsmon_notifycmd: "NOTIFYCMD /sbin/upssched"
