--- a/requirements-dev-frozen.txt
+++ b/requirements-dev-frozen.txt
@@ -1,38 +1,50 @@
-ansible-core==2.14.2
-ansible-lint==6.13.1
-attrs==22.2.0
-black==23.1.0
+ansible-compat==4.1.5
+ansible-core==2.15.2
+ansible-lint==6.17.2
+attrs==23.1.0
+black==23.7.0
 bracex==2.3.post1
+certifi==2023.7.22
 cffi==1.15.1
 cfgv==3.3.1
-click==8.1.3
-cryptography==39.0.1
-distlib==0.3.6
-filelock==3.9.0
-identify==2.5.18
+charset-normalizer==3.2.0
+click==8.1.6
+cryptography==41.0.3
+distlib==0.3.7
+filelock==3.12.2
+identify==2.5.26
+idna==3.4
+importlib-resources==5.0.7
 Jinja2==3.1.2
-jsonschema==4.17.3
-markdown-it-py==2.1.0
-MarkupSafe==2.1.2
+jsonschema==4.18.6
+jsonschema-specifications==2023.7.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
 mdurl==0.1.2
 mypy-extensions==1.0.0
-nodeenv==1.7.0
-packaging==23.0
-pathspec==0.11.0
-pip==23.0.1
-platformdirs==3.0.0
-pre-commit==3.0.4
+nodeenv==1.8.0
+packaging==23.1
+pathspec==0.11.2
+pip==23.2.1
+platformdirs==3.10.0
+pre-commit==3.3.3
 pre-commit-hooks==4.4.0
 pycparser==2.21
-Pygments==2.14.0
-pyrsistent==0.19.3
-PyYAML==6.0
-resolvelib==0.8.1
-rich==13.3.1
-ruamel.yaml==0.17.21
-setuptools==67.3.2
+Pygments==2.15.1
+PyYAML==6.0.1
+referencing==0.30.1
+requests==2.31.0
+resolvelib==1.0.1
+rich==13.5.2
+rpds-py==0.9.2
+ruamel.yaml==0.17.32
+ruamel.yaml.clib==0.2.7
+setuptools==68.0.0
 subprocess-tee==0.4.1
-virtualenv==20.19.0
+tomli==2.0.1
+typing_extensions==4.7.1
+urllib3==2.0.4
+virtualenv==20.24.2
 wcmatch==8.4.1
-wheel==0.38.4
-yamllint==1.29.0
+wheel==0.41.0
+yamllint==1.32.0
