split out post k3s install ansible actions

--- a/bare-metal/roles/k3s/tasks/main.yml
+++ b/bare-metal/roles/k3s/tasks/main.yml
@@ -4,3 +4,6 @@
 
 - name: Install k3s
   ansible.builtin.include_tasks: k3s.yml
+
+- name: Create initial k3s required resources # secrets, labels etc
+  ansible.builtin.include_tasks: post_k3s_install.yml
