--- a/kubernetes/infrastructure/external/dns/kustomization.yaml
+++ b/kubernetes/infrastructure/external/dns/kustomization.yaml
@@ -2,7 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - downloads-network-policy.yaml
-  - jdownloader
-  - qbittorrent
-  - sabnzbd
+  - external-dns-deploy.yaml
+  - external-dns-records.yaml
