--- a/kubernetes/infrastructure/ingress/external/kustomization.yaml
+++ b/kubernetes/infrastructure/ingress/external/kustomization.yaml
@@ -2,7 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - downloads-network-policy.yaml
-  - jdownloader
-  - qbittorrent
-  - sabnzbd
+  - external-helm-release.yaml # resources allowed internally & externally
