--- a/kubernetes/infrastructure/ingress/internal/kustomization.yaml
+++ b/kubernetes/infrastructure/ingress/internal/kustomization.yaml
@@ -2,7 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - downloads-network-policy.yaml
-  - jdownloader
-  - qbittorrent
-  - sabnzbd
+  - internal-helm-release.yaml # resources only allowed internally
