--- a/kubernetes/infrastructure/ingress/logging/kustomization.yaml
+++ b/kubernetes/infrastructure/ingress/logging/kustomization.yaml
@@ -2,7 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - downloads-network-policy.yaml
-  - jdownloader
-  - qbittorrent
-  - sabnzbd
+  - logging-internal-helm-release.yaml # special ingress for logs - nginx logs not ingested by splunk
