--- a/kubernetes/infrastructure/kustomization.yaml
+++ b/kubernetes/infrastructure/kustomization.yaml
@@ -2,10 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - kube-system # reloader
-  - cert-manager
-  - metallb
-  - ingress
-  - external # dependent on ingress
-  - longhorn
-  - downloads-vpn
+  - cert-manager/ks.yaml
+  - external/ks.yaml # cloudflared and dns
+  - kube-system/ks.yaml # coredns and reloader
+  - longhorn/ks.yaml # config, external-snapshotter & crds
+  - ingress/ks.yaml # flux/longhorn config, ingress - external, internal, logging
+  - metallb/ks.yaml
+  - secrets/ks.yaml
+  - vpn/ks.yaml
