--- a/kubernetes/infrastructure/longhorn/config/kustomization.yaml
+++ b/kubernetes/infrastructure/longhorn/config/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - downloads-network-policy.yaml
-  - jdownloader
-  - qbittorrent
-  - sabnzbd
+  - longhorn-backups.yaml
+  - longhorn-default-settings.yaml
+  - longhorn-snapshot.yaml
+  - longhorn-snapshot-class.yaml
