--- a/kubernetes/infrastructure/metallb/ks.yaml
+++ b/kubernetes/infrastructure/metallb/ks.yaml
@@ -2,19 +2,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: apps
+  name: infrastructure-metallb-config
   namespace: flux-system
 spec:
-  dependsOn:
-    - name: cluster-settings
-    - name: helm
-    - name: infrastructure
-#    - name: infrastructure-external-secrets-stores
-#    - name: infrastructure-ingress-external
-#    - name: infrastructure-ingress-internal
-    - name: namespaces
   interval: 1h0m0s
-  path: ./kubernetes/apps
+  path: ./kubernetes/infrastructure/metallb/config
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
     substitute: {}
     substituteFrom:
@@ -25,5 +17,4 @@ spec:
     kind: GitRepository
     name: flux-system
   timeout: 5m0s
-  validation: client
   wait: true
