--- a/kubernetes/infrastructure/secrets/stores/kustomization.yaml
+++ b/kubernetes/infrastructure/secrets/stores/kustomization.yaml
@@ -1,8 +1,7 @@
+---
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: kube-system
 resources:
-  - downloads-network-policy.yaml
-  - jdownloader
-  - qbittorrent
-  - sabnzbd
+  - clustersecretstore.yaml
