--- a/kubernetes/infrastructure/vpn/app/kustomization.yaml
+++ b/kubernetes/infrastructure/vpn/app/kustomization.yaml
@@ -2,7 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - downloads-network-policy.yaml
-  - jdownloader
-  - qbittorrent
-  - sabnzbd
+#  - secret.yaml
+  - helm-release.yaml
