--- a/kubernetes/monitor/kustomization.yaml
+++ b/kubernetes/monitor/kustomization.yaml
@@ -2,8 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - splunk-operator
-  - splunk
-  - otel
-  - splunk-syslog
-  - prometheus
+  - otel/ks.yaml
+  - prometheus/ks.yaml
+  - splunk/ks.yaml
+  - splunk-syslog/ks.yaml
