--- a/kubernetes/monitor/splunk-syslog/ks.yaml
+++ b/kubernetes/monitor/splunk-syslog/ks.yaml
@@ -1,13 +1,18 @@
+---
 # yaml-language-server: $schema=../../../schemas/kustomization_v1beta2.json
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: helm
+  name: monitor-splunk-syslog
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: monitor-splunk-app
+#    - name: namespaces
   interval: 1h0m0s
-  path: ./kubernetes/helm
+  path: ./kubernetes/monitor/splunk-syslog/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
+  timeout: 5m0s
