feat: convert to external-secrets secret provider
Part 1 of removing csi-secrets-store-provider... AKA stop syncing secrets with this product and convert to using external-secrets.

--- a/kubernetes/infrastructure/external/ks.yaml
+++ b/kubernetes/infrastructure/external/ks.yaml
@@ -6,9 +6,8 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-#    - name: namespaces
+    - name: infrastructure-external-secrets-stores
     - name: infrastructure-reloader
-#    - name: secrets
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/external/cloudflared
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
@@ -29,9 +28,6 @@ metadata:
   name: infrastructure-external-dns
   namespace: flux-system
 spec:
-#  dependsOn:
-#    - name: namespaces
-#    - name: secrets
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/external/dns
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
