--- a/kubernetes/monitor/splunk/app/kustomization.yaml
+++ b/kubernetes/monitor/splunk/app/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - secrets.yaml
   - splunk-defaults.yaml
   - splunk-deploy.yaml
