--- a/kubernetes/monitor/splunk/ks.yaml
+++ b/kubernetes/monitor/splunk/ks.yaml
@@ -7,12 +7,11 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: infrastructure-external-secrets-stores
     - name: infrastructure-ingress-logging
+    - name: infrastructure-reloader
     - name: monitor-splunk-operator # deploys splunk crds
 #    - name: namespaces
-    - name: infrastructure-reloader
-#    - name: secrets
-#    - name: secrets-sync
   interval: 1h0m0s
   path: ./kubernetes/monitor/splunk/app
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
@@ -35,11 +34,9 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-#    - name: helm
+    - name: infrastructure-external-secrets-stores
     - name: infrastructure-ingress-logging
 #    - name: namespaces
-#    - name: secrets
-#    - name: secrets-sync
   interval: 1h0m0s
   path: ./kubernetes/monitor/splunk/splunk-operator
   prune: true
