--- a/kubernetes/monitor/splunk/splunk-operator/kustomization.yaml
+++ b/kubernetes/monitor/splunk/splunk-operator/kustomization.yaml
@@ -3,3 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helm-release.yaml
+  - base-splunk-secret.yaml # needed so splunk doesnt generate its own secret values
