feat(schemas): add missing schemas

--- a/kubernetes/monitor/splunk/app/secrets.yaml
+++ b/kubernetes/monitor/splunk/app/secrets.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -19,6 +20,7 @@ spec:
       remoteRef:
         key: splunk-blob-storage-secret
 ---
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -37,6 +39,7 @@ spec:
       remoteRef:
         key: splunk-enterprise-license
 ---
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
