--- a/kubernetes/monitor/splunk/splunk-operator/base-splunk-secret.yaml
+++ b/kubernetes/monitor/splunk/splunk-operator/base-splunk-secret.yaml
@@ -1,5 +1,6 @@
 # when deleting a splunk deployment it will delete the existing secret. This then causes it to create a secret with random values if secret doesnt exist
 # trying to force this to create first so it doesnt get this chance.
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
