--- a/kubernetes/helm/external-secrets.yaml
+++ b/kubernetes/helm/external-secrets.yaml
@@ -1,5 +1,5 @@
-# Reference to Helm repository
-apiVersion: source.toolkit.fluxcd.io/v1beta1
+# yaml-language-server: $schema=../../schemas/helmrepository_v1beta2.json
+apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: external-secrets
