--- a/kubernetes/infrastructure/cert-manager/config/secret.yaml
+++ b/kubernetes/infrastructure/cert-manager/config/secret.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
