--- a/kubernetes/infrastructure/external/cloudflared/secrets.yaml
+++ b/kubernetes/infrastructure/external/cloudflared/secrets.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
@@ -16,6 +17,7 @@ spec:
       remoteRef:
         key:  cloudflared-tunnel-creds
 ---
+# yaml-language-server: $schema=../../../../schemas/externalsecret_v1beta1.json
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
