--- a/kubernetes/infrastructure/longhorn/config/longhorn-snapshot-class.yaml
+++ b/kubernetes/infrastructure/longhorn/config/longhorn-snapshot-class.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=../../../../schemas/helmrepository_v1beta2.json
 kind: VolumeSnapshotClass
 apiVersion: snapshot.storage.k8s.io/v1
 metadata:
