--- a/kubernetes/clusters/production/repositories.yaml
+++ b/kubernetes/clusters/production/repositories.yaml
@@ -2,14 +2,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: cluster-settings
+  name: repositories
   namespace: flux-system
 spec:
   interval: 1h0m0s
+  path: ./kubernetes/clusters/repositories
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./kubernetes/clusters/settings/production
-  prune: true
-  wait: true
-  timeout: 5m0s
