--- a/kubernetes/clusters/repositories/splunk-otel-collector.yaml
+++ b/kubernetes/clusters/repositories/splunk-otel-collector.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../../schemas/helmrepository_v1beta2.json
+# yaml-language-server: $schema=../../../schemas/helmrepository_v1beta2.json
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
