--- a/kubernetes/infrastructure/kube-system/ks.yaml
+++ b/kubernetes/infrastructure/kube-system/ks.yaml
@@ -26,6 +26,8 @@ metadata:
   name: infrastructure-reloader
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: repositories
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/kube-system/reloader
   prune: true
