--- a/kubernetes/infrastructure/secrets/ks.yaml
+++ b/kubernetes/infrastructure/secrets/ks.yaml
@@ -6,6 +6,9 @@ metadata:
   name: infrastructure-external-secrets # install crds
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: namespaces
+    - name: repositories
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/secrets/app
   prune: true
@@ -23,6 +26,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: cluster-settings
     - name: infrastructure-external-secrets # needs crds to be installed first
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/secrets/stores
