--- a/kubernetes/clusters/develop/monitor.yaml
+++ b/kubernetes/clusters/develop/monitor.yaml
@@ -2,14 +2,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: cluster-settings
+  name: monitor
   namespace: flux-system
 spec:
   interval: 1h0m0s
-  path: ./kubernetes/clusters/settings/production
+  path: ./kubernetes/monitor
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
   timeout: 5m0s
-  wait: true
+  validation: client
