--- a/kubernetes/clusters/develop/namespaces.yaml
+++ b/kubernetes/clusters/develop/namespaces.yaml
@@ -1,15 +1,15 @@
 # yaml-language-server: $schema=../../../schemas/kustomization_v1beta2.json
-apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: namespaces
   namespace: flux-system
 spec:
   interval: 1h0m0s
+  path: ./kubernetes/namespaces
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./kubernetes/namespaces
-  prune: true
   timeout: 5m0s
-  validation: client
+  wait: true
