--- a/kubernetes/clusters/production/apps.yaml
+++ b/kubernetes/clusters/production/apps.yaml
@@ -8,10 +8,8 @@ spec:
   dependsOn:
     - name: cluster-settings
     - name: infrastructure-external-secrets-stores
-    - name: infrastructure
-#    - name: infrastructure-external-secrets-stores
-#    - name: infrastructure-ingress-external
-#    - name: infrastructure-ingress-internal
+    - name: infrastructure-ingress-external
+    - name: infrastructure-ingress-internal
     - name: namespaces
     - name: repositories
   interval: 1h0m0s
@@ -26,5 +24,4 @@ spec:
     kind: GitRepository
     name: flux-system
   timeout: 5m0s
-  validation: client
   wait: true
