--- a/kubernetes/infrastructure/cert-manager/ks.yaml
+++ b/kubernetes/infrastructure/cert-manager/ks.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: cluster-settings
     - name: infrastructure-external-secrets-stores
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/cert-manager/config
