--- a/kubernetes/infrastructure/ingress/ks.yaml
+++ b/kubernetes/infrastructure/ingress/ks.yaml
@@ -6,10 +6,11 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-#    - name: cluster-settings
+    - name: cluster-settings
     - name: infrastructure-cert-manager-config
     - name: infrastructure-metallb-config
-#    - name: namespaces
+    - name: namespaces
+    - name: repositories
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/ingress/external
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
@@ -31,9 +32,11 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: cluster-settings
     - name: infrastructure-cert-manager-config
     - name: infrastructure-metallb-config
-#    - name: namespaces
+    - name: namespaces
+    - name: repositories
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/ingress/internal
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
@@ -55,9 +58,11 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: cluster-settings
     - name: infrastructure-cert-manager-config
     - name: infrastructure-metallb-config
-#    - name: namespaces
+    - name: namespaces
+    - name: repositories
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/ingress/logging
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
@@ -79,6 +84,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: cluster-settings
     - name: infrastructure-ingress-internal
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/ingress/rules
