--- a/kubernetes/infrastructure/metallb/ks.yaml
+++ b/kubernetes/infrastructure/metallb/ks.yaml
@@ -5,6 +5,8 @@ metadata:
   name: infrastructure-metallb-config
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: cluster-settings
   interval: 1h0m0s
   path: ./kubernetes/infrastructure/metallb/config
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
