--- a/kubernetes/monitor/otel/ks.yaml
+++ b/kubernetes/monitor/otel/ks.yaml
@@ -7,10 +7,16 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: cluster-settings
     - name: monitor-splunk-app
-#    - name: namespaces
+    - name: repositories
   interval: 1h0m0s
   path: ./kubernetes/monitor/otel/app
+  postBuild: # https://github.com/fluxcd/helm-operator/issues/120
+    substitute: {}
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-settings
   prune: true
   sourceRef:
     kind: GitRepository
