--- a/kubernetes/monitor/prometheus/ks.yaml
+++ b/kubernetes/monitor/prometheus/ks.yaml
@@ -7,11 +7,18 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: cluster-settings
     - name: infrastructure-external-secrets-stores
     - name: infrastructure-ingress-logging
-#    - name: namespaces
+    - name: namespaces
+    - name: repositories
   interval: 1h0m0s
   path: ./kubernetes/monitor/prometheus/app
+  postBuild: # https://github.com/fluxcd/helm-operator/issues/120
+    substitute: {}
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-settings
   prune: true
   sourceRef:
     kind: GitRepository
