--- a/kubernetes/monitor/splunk-syslog/ks.yaml
+++ b/kubernetes/monitor/splunk-syslog/ks.yaml
@@ -7,11 +7,16 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: cluster-settings
     - name: monitor-splunk-app
-#    - name: namespaces
   interval: 1h0m0s
   path: ./kubernetes/monitor/splunk-syslog/app
   prune: true
+  postBuild: # https://github.com/fluxcd/helm-operator/issues/120
+    substitute: {}
+    substituteFrom:
+      - kind: ConfigMap
+        name: cluster-settings
   sourceRef:
     kind: GitRepository
     name: flux-system
