--- a/kubernetes/monitor/splunk/ks.yaml
+++ b/kubernetes/monitor/splunk/ks.yaml
@@ -7,11 +7,11 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
+    - name: cluster-settings
     - name: infrastructure-external-secrets-stores
     - name: infrastructure-ingress-logging
     - name: infrastructure-reloader
     - name: monitor-splunk-operator # deploys splunk crds
-#    - name: namespaces
   interval: 1h0m0s
   path: ./kubernetes/monitor/splunk/app
   postBuild: # https://github.com/fluxcd/helm-operator/issues/120
@@ -36,7 +36,8 @@ spec:
   dependsOn:
     - name: infrastructure-external-secrets-stores
     - name: infrastructure-ingress-logging
-#    - name: namespaces
+    - name: namespaces
+    - name: repositories
   interval: 1h0m0s
   path: ./kubernetes/monitor/splunk/splunk-operator
   prune: true
