fix(prometheus): recreate missing helmchart
Accidentally deleted in commit 8ed6226c218c7b1b8511b9088489156c9e485e72

--- a/kubernetes/clusters/repositories/kustomization.yaml
+++ b/kubernetes/clusters/repositories/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - angelnu-charts.yaml
   - external-secrets.yaml
   - ingress-nginx.yaml
+  - prometheus-community.yaml
   - reloader.yaml
   - splunk-operator.yaml
   - splunk-otel-collector.yaml
