--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,24 @@ repos:
         files: \.(yml)$
         additional_dependencies:
           - .[core]
+      - id: checkov-ansible
+        name: Checkov Ansible
+        description: This hook runs checkov on ansible items.
+        entry: .venv/bin/checkov
+        args: ["-d", "ansible", "--framework", "ansible"]
+        language: python
+        pass_filenames: false
+        always_run: true
+        require_serial: true
+      - id: checkov-kubernetes
+        name: Checkov Kubernetes
+        description: This hook runs checkov on kubernetes items.
+        entry: .venv/bin/checkov
+        args: ["-d", "kubernetes", "--framework", "kubernetes", "helm", "kustomize", "yaml"]
+        language: python
+        pass_filenames: false
+        always_run: true
+        require_serial: true
       - id: end-of-file-fixer
         name: fix end of files
         description: ensures that a file is either empty, or ends with one newline.
