feat(security): Token and seccomprofile improvements

--- a/kubernetes/apps/downloads/jdownloader/jdownloader-deploy.yaml
+++ b/kubernetes/apps/downloads/jdownloader/jdownloader-deploy.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         name: jdownloader
     spec:
+      automountServiceAccountToken: false
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault
       volumes:
         - name: jdownloader-volume
           persistentVolumeClaim:
