--- a/kubernetes/apps/home-automation/home-assistant/hass-deploy.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/hass-deploy.yaml
@@ -17,6 +17,10 @@ spec:
       labels:
         name: hass
     spec:
+      automountServiceAccountToken: false
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault
       volumes:
         - name: hass-config
           configMap:
