--- a/kubernetes/infrastructure/external/cloudflared/cloudflared-deploy.yaml
+++ b/kubernetes/infrastructure/external/cloudflared/cloudflared-deploy.yaml
@@ -15,10 +15,13 @@ spec:
       labels:
         app: cloudflared
     spec:
+      automountServiceAccountToken: false
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 1000
+        seccompProfile:
+          type: RuntimeDefault
       containers:
         - name: cloudflared
           image: cloudflare/cloudflared:2023.5.1-amd64
