--- a/kubernetes/apps/downloads/qbittorrent/qbittorrent-deploy.yaml
+++ b/kubernetes/apps/downloads/qbittorrent/qbittorrent-deploy.yaml
@@ -30,12 +30,15 @@ spec:
         - name: downloads-volume
           persistentVolumeClaim:
             claimName: qbittorrent-downloads-pvc
+      automountServiceAccountToken: false
       securityContext:
         runAsNonRoot: true
         runAsUser: 568
         runAsGroup: 568
         fsGroup: 568
         fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       containers:
         - name: qbittorrent
           image: ghcr.io/onedr0p/qbittorrent:4.5.4@sha256:19e2a93d61b07f699f3bc8b9db5e23cf57a838bd6fd92fe6e272149836dc6506
