--- a/kubernetes/apps/home-automation/mosquitto.yaml
+++ b/kubernetes/apps/home-automation/mosquitto.yaml
@@ -30,12 +30,15 @@ spec:
       labels:
         app: mosquitto
     spec:
+      automountServiceAccountToken: false
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       volumes:
         - name: mosquitto-config
           configMap:
