--- a/kubernetes/apps/home-automation/zigbee2mqtt/zigbee2mqtt-deploy.yaml
+++ b/kubernetes/apps/home-automation/zigbee2mqtt/zigbee2mqtt-deploy.yaml
@@ -15,12 +15,15 @@ spec:
       labels:
         app: zigbee2mqtt
     spec:
+      automountServiceAccountToken: false
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       volumes:
         - name: zigbee2mqtt-volume
           persistentVolumeClaim:
