--- a/kubernetes/apps/media/jellyfin/jellyfin-deployment.yaml
+++ b/kubernetes/apps/media/jellyfin/jellyfin-deployment.yaml
@@ -14,12 +14,15 @@ spec:
       labels:
         name: jellyfin
     spec:
+      automountServiceAccountToken: false
       securityContext:
         runAsNonRoot: true
         runAsUser: 568
         runAsGroup: 568
         fsGroup: 568
         fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       volumes:
         - name: jellyfin-volume
           persistentVolumeClaim:
