--- a/kubernetes/infrastructure/external/dns/external-dns-deploy.yaml
+++ b/kubernetes/infrastructure/external/dns/external-dns-deploy.yaml
@@ -52,6 +52,8 @@ spec:
         runAsNonRoot: true
         runAsUser: 1000
         runAsGroup: 1000
+        seccompProfile:
+          type: RuntimeDefault
       serviceAccountName: external-dns
       containers:
         - name: external-dns
