--- a/kubernetes/infrastructure/external/dns/external-dns-deploy.yaml
+++ b/kubernetes/infrastructure/external/dns/external-dns-deploy.yaml
@@ -37,6 +37,9 @@ kind: Deployment
 metadata:
   name: external-dns
   namespace: external
+  annotations:
+    checkov.io/skip1: CKV_K8S_35=Prefer using secrets as files over secrets as environment variables
+    checkov.io/skip2: CKV_K8S_38=Ensure that Service Account Tokens are only mounted where necessary
 spec:
   strategy:
     type: Recreate
