--- a/kubernetes/monitor/splunk-syslog/app/syslog-install.yaml
+++ b/kubernetes/monitor/splunk-syslog/app/syslog-install.yaml
@@ -132,6 +132,10 @@ kind: StatefulSet
 metadata:
   name: splunk-connect-for-syslog
   namespace: monitor
+  annotations:
+    checkov.io/skip1: CKV_K8S_22=Use read-only filesystem for containers where possible - this will break container
+    checkov.io/skip2: CKV_K8S_35=Prefer using secrets as files over secrets as environment variables
+    checkov.io/skip3: CKV_K8S_38=Ensure that Service Account Tokens are only mounted where necessary
   labels:
     helm.sh/chart: splunk-connect-for-syslog-2.49.3
     app.kubernetes.io/name: splunk-connect-for-syslog
@@ -154,6 +158,9 @@ spec:
         app.kubernetes.io/instance: release-name
     spec:
       serviceAccountName: splunk-connect-for-syslog
+      securityContext:
+        seccompProfile:
+          type: RuntimeDefault
       volumes:
         - name: syslog-ng-var
           emptyDir:
